--- a/myproject/mysite/templates/about.html
+++ b/myproject/mysite/templates/about.html
@@ -27,7 +27,7 @@
         <div class="board-directors">
             <div class="board-table">
 
-                <table>
+                <table class="tableboard">
                     <tr>
                         <td>CH.AJIT SINGH (CHAIRMAN)</td>
                         <td>Mr.KANWAL JEET SINGH (VICE CHAIRMAN)</td>
