--- a/myproject/mysite/templates/index.html
+++ b/myproject/mysite/templates/index.html
@@ -20,15 +20,15 @@
                 <div class="persons">
                     <div class="row personsrow">
                         <div class="persons">
-                            <img src="{%static 'assets/avatar.png' %}" alt="">
+                            <img src="{%static 'assets/chairman.jpg' %}" alt="">
                             <p>chairman</p>
                         </div>
                         <div class="persons">
-                            <img src="{%static 'assets/avatar.png' %}" alt="">
+                            <img src="{%static 'assets/vice_cm.jpg' %}" alt="">
                             <p>chairman</p>
                         </div>
                         <div class="persons">
-                            <img src="{%static 'assets/avatar.png' %}" alt="">
+                            <img src="{%static 'assets/CEO.jpg' %}" alt="">
                             <p>chairman</p>
                         </div>
 
@@ -71,7 +71,7 @@
             <h1>Articles</h1>
             <div class="row articles-row">
                 <div class="cardphoto">
-                    <img src="../static/assets/newpaper.jpg" alt="">
+                    <img src="{% static 'assets/article1_sadsansad.jpg' %}" alt="">
                     <div class="photoinfo">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis non quis molestiae enim.
                             Porro accusantium qui illo, illum ipsum expedita minus molestiae corporis sit magnam,
@@ -82,7 +82,7 @@
 
                 </div>
                 <div class="cardphoto">
-                    <img src="../static/assets/newpaper.jpg" alt="">
+                    <img src="{% static 'assets/article1_sadsansad.jpg' %}" alt="">
                     <div class="photoinfo">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis non quis molestiae enim.
                             Porro accusantium qui illo, illum ipsum expedita minus molestiae corporis sit magnam,
@@ -93,7 +93,7 @@
 
                 </div>
                 <div class="cardphoto">
-                    <img src="../static/assets/newpaper.jpg" alt="">
+                    <img src="{% static 'assets/article1_sadsansad.jpg' %}" alt="">
                     <div class="photoinfo">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis non quis molestiae enim.
                             Porro accusantium qui illo, illum ipsum expedita minus molestiae corporis sit magnam,
