--- a/myproject/mysite/templates/articles.html
+++ b/myproject/mysite/templates/articles.html
@@ -4,12 +4,13 @@
 <body>
 
     {%block body%}
+    {%load static%}
     <section class="articles" id="articles">
         <div class="container">
             <h1>Articles</h1>
             <div class="row articles-row">
                 <div class="cardphoto">
-                    <img src="../static/assets/newpaper.jpg" alt="">
+                    <img src="{%static 'assets/article1_sadsansad.jpg'%}" alt="">
                     <div class="photoinfo">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis non quis molestiae enim.
                             Porro accusantium qui illo, illum ipsum expedita minus molestiae corporis sit magnam,
@@ -20,7 +21,7 @@
 
                 </div>
                 <div class="cardphoto">
-                    <img src="../static/assets/newpaper.jpg" alt="">
+                    <img src="{%static 'assets/article1_sadsansad.jpg'%}" alt="">
                     <div class="photoinfo">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis non quis molestiae enim.
                             Porro accusantium qui illo, illum ipsum expedita minus molestiae corporis sit magnam,
@@ -31,7 +32,7 @@
 
                 </div>
                 <div class="cardphoto">
-                    <img src="../static/assets/newpaper.jpg" alt="">
+                    <img src="{%static 'assets/article1_sadsansad.jpg'%}" alt="">
                     <div class="photoinfo">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis non quis molestiae enim.
                             Porro accusantium qui illo, illum ipsum expedita minus molestiae corporis sit magnam,
