--- a/myproject/mysite/templates/loan.html
+++ b/myproject/mysite/templates/loan.html
@@ -40,8 +40,8 @@
 <section>
     <div class="container">
         <h2>Submit Your loan Application</h2>
-        <form action="" method="POST">
-        {% csrf_token %}
+        <form action="" method="POST" enctype="multipart/form-data">
+            {%csrf_token%}
         <div class="loaninput">
         <label for="name">Name</label>
         <input type="text"name="name" placeholder="Enter your Name" required>
