--- a/myproject/mysite/templates/admin.html
+++ b/myproject/mysite/templates/admin.html
@@ -15,30 +15,18 @@
           {%csrf_token%}
           <div class="cminput">
             <label for="">Enter Chairman message</label>
-            <textarea
-              name="message"
-              id="textcmmessage"
-              cols="30"
-              rows="2"
-              placeholder="Enter message"
-            ></textarea>
+            <textarea name="message" id="textcmmessage" cols="30" rows="2" placeholder="Enter message"></textarea>
           </div>
           <button onclick="cmMessage()">Post</button>
         </form>
       </div>
       <div class="upload-members">
         <h2>Upload members</h2>
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
           {%csrf_token%}
           <div class="memberinput">
             <label for="bname">Branch Name</label>
-            <input
-              type="text"
-              name="bname"
-              id=""
-              placeholder="Enter Branch Name"
-              required
-            />
+            <input type="text" name="bname" id="" placeholder="Enter Branch Name" required />
             <input type="file" name="bfile" id="" multiple />
           </div>
           <button type="submit">Upload Files</button>
@@ -49,35 +37,43 @@
 </div>
 <hr>
 <hr>
-  <div class="container">
-    <h2>Loan Form Data</h2>
-    <div class="userformdiv">
-      <div class="userform-table">
-        <table class="tableuser">
-          <tr>
-            <th>Name</th>
-            <th>Phone Number</th>
-            <th>Registration id</th>
-            <th>Form</th>
-          </tr>
-          {% for userform in userforms %}
-          <tr>
-            <td>{{userform.name}}</td>
-            <td>{{userform.phno}}</td>
-            <td>{{userform.regno}}</td>
-            <td class="tablecol">
-              <a href="/media/{{userform.userform}}" target="_blank"
-                ><img src="{% static 'assets/pdflogo2.png' %}" alt="" /></a
-              >{{userform.userform}}
-            </td>
-          </tr>
-          {% endfor %}
-        </table>
-      </div>
+<div class="container">
+  <h2>Loan Form Data</h2>
+  <div class="userformdiv">
+    <div class="userform-table">
+      <table class="tableuser">
+        <tr>
+          <th>Name</th>
+          <th>Phone Number</th>
+          <th>Registration id</th>
+          <th>Form</th>
+          <th>Date</th>
+          <th>Delete</th>
+        </tr>
+        {% for userform in userforms %}
+        <tr>
+          <td>{{userform.name}}</td>
+          <td>{{userform.phno}}</td>
+          <td>{{userform.regno}}</td>
+          <td class="tablecol">
+            <a href="/media/{{userform.userform}}" target="_blank"><img src="{% static 'assets/pdflogo2.png' %}"
+                alt="" /></a>{{userform.userform}}
+          </td>
+          <td>{{userform.date}}</td>
+          <td>
+            <form action="{% url 'deleteform' userform.id %}" method="POST">
+              {% csrf_token %}
+              <button type="submit">Delete</button>
+            </form>
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
   </div>
+</div>
 
-  <script src="{%static 'script/script.js'%}"></script>
+<script src="{%static 'script/script.js'%}"></script>
 
-  {% endblock body %}
+{% endblock body %}
 </section>
