--- a/myproject/mysite/templates/base.html
+++ b/myproject/mysite/templates/base.html
@@ -77,6 +77,7 @@
                             <p><a href="{%url 'about' %}">ABOUT US</a></p>
                             <p><a href="{%url 'members' %}">MEMBER</a></p>
                             <p><a href="{%url 'articles' %}">ARTICLE</a></p>
+                            <p><a href="{%url 'loan' %}">LOAN</a></p>
                             <p><a href="{%url 'contact' %}">CONTACT US</a></p>
 
                         </div>
