--- a/myproject/mysite/templates/index.html
+++ b/myproject/mysite/templates/index.html
@@ -21,15 +21,18 @@
                     <div class="row personsrow">
                         <div class="persons">
                             <img src="{%static 'assets/chairman.jpg' %}" alt="">
-                            <p>chairman</p>
+                            <p>CH. AJIT SINGH</p>
+                            <p> CHAIRMAN</p>
                         </div>
                         <div class="persons">
                             <img src="{%static 'assets/vice_cm.jpg' %}" alt="">
-                            <p>chairman</p>
+                            <p>Mr. KANWAL JEET SINGH</p>
+                            <p> VICE CHAIRMAN</p>
                         </div>
                         <div class="persons">
                             <img src="{%static 'assets/CEO.jpg' %}" alt="">
-                            <p>chairman</p>
+                            <p>Mr. JAGAN PRASAD SHARMA</p>
+                            <p> CHIEF EXECUTIVE OFFICER</p>
                         </div>
 
                     </div>
