--- a/myproject/mysite/templates/login.html
+++ b/myproject/mysite/templates/login.html
@@ -1,28 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{%block body%}
+{%load static%}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% if messages %}
+{% for message in messages %}
+<div class="loan-message" id="loan-message">
+    <strong>{{message}}</strong>
+    <div class="cross" id="cross" onclick="disableMessage()">&#10060;</div>
+</div>
+{% endfor %}
+{% endif %}
 
-<body>
-    <h1>login</h1>
-    <form action="" method="POST" novalidate>
-        {%csrf_token%}
-        {%if form.non_field_errors%}
-        {%for error in form.non_field_errors%}
-        <p>{{error}}</p>
-        {%endfor%}
-        {%endif%}
-        {%for fm in form%}
-        {{fm.label_tag}}{{fm}}{{fm.errors|striptags}}
-        <br><br>
-        {%endfor%}
-        <input type="submit" value="submit">
-    </form>
-</body>
-
-</html>
+<section class="branchfiles">
+    <div class="container">
+        <h1>login</h1>
+        <div class="loginform">
+            <form action="" method="POST" novalidate>
+                {%csrf_token%}
+                {%if form.non_field_errors%}
+                {%for error in form.non_field_errors%}
+                <p>{{error}}</p>
+                {%endfor%}
+                {%endif%}
+                {%for fm in form%}
+                {{fm.label_tag}}{{fm}}{{fm.errors|striptags}}
+                <br><br>
+                {%endfor%}
+                <div class="g-recaptcha" data-sitekey="6LeR-WgeAAAAAPgTuI0q-gGO8-OFGD7F2tndTbPd"></div>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
+</section>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+{% endblock body %}
