--- a/myproject/mysite/templates/base.html
+++ b/myproject/mysite/templates/base.html
@@ -55,6 +55,7 @@
                     <li><a href=" {%url 'logout'%}" onclick="toggleMenu();">LOGOUT</a></li>
                     {%endif%}
                 </ul>
+            </nav>
         </div>
         </nav>
     </div>
