--- a/myproject/mysite/templates/admin.html
+++ b/myproject/mysite/templates/admin.html
@@ -1,12 +1,30 @@
-{% extends 'base.html' %} {% block body %} {% load static %} {% if messages %}
+{% extends 'base.html' %} {% block body %} {% load static %}
+
+
+<nav>
+  <div class="logo" id="logo">
+    <a href="#banner"><img src="" alt=""></a>
+  </div>
+  <div class="menuToggle" onclick="toggleMenu();"></div>
+  <ul class="navigation">
+    <li><a href="#up-cm-mmbr-msg" onclick="toggleMenu();">Chairman Message</a></li>
+    <li><a href="#up-cm-mmbr-msg" onclick="toggleMenu();">Upload Members</a></li>
+    <li><a href="#londata" onclick="toggleMenu();">Loan Form Data</a></li>
+    <li><a href="#conquy" onclick="toggleMenu();">Contact Queries</a></li>
+
+  </ul>
+</nav>
+
+{% if messages %}
 {% for message in messages %}
 <div class="loan-message" id="loan-message">
   <strong>{{message}}</strong>
   <div class="cross" id="cross" onclick="disableMessage()">&#10060;</div>
 </div>
 {% endfor %} {% endif %}
+
 <h1>Admin Panel</h1>
-<div class="chairman message">
+<section class="" id="up-cm-mmbr-msg">
   <div class="container">
     <div class="row post-upload">
       <div class="post-chairman">
@@ -34,47 +52,97 @@
       </div>
     </div>
   </div>
-</div>
+</section>
 <hr>
 <hr>
-<div class="container">
-  <h2>Loan Form Data</h2>
-  <div class="userformdiv">
-    <div class="userform-table">
-      <table class="tableuser">
-        <tr>
-          <th>Name</th>
-          <th>Phone Number</th>
-          <th>Registration id</th>
-          <th>Form</th>
-          <th>Date</th>
-          <th>Delete</th>
-        </tr>
-        {% for userform in userforms %}
-        <tr>
-          <td>{{userform.name}}</td>
-          <td>{{userform.phno}}</td>
-          <td>{{userform.regno}}</td>
-          <td class="tablecol">
-            <a href="/media/{{userform.userform}}" target="_blank"><img src="{% static 'assets/pdflogo2.png' %}"
-                alt="" /></a>
-                {{userform.userform}}
-          </td>
-          <td>{{userform.date}}</td>
-          <td>
-            <form action="{% url 'deleteform' userform.id %}" method="POST">
-              {% csrf_token %}
-              <button type="submit">Delete</button>
-            </form>
-          </td>
-        </tr>
-        {% endfor %}
-      </table>
+<section id="londata">
+  <div class="container">
+    <h2>Loan Form Data</h2>
+    <div class="userformdiv">
+      <div class="userform-table">
+        <table class="tableuser">
+          <tr>
+            <th>Name</th>
+            <th>Phone Number</th>
+            <th>Registration id</th>
+            <th>Form</th>
+            <th>Date</th>
+            <th>Status</th>
+            <th>Delete</th>
+          </tr>
+          {% for userform in userforms %}
+          <tr>
+            <td>{{userform.name}}</td>
+            <td>{{userform.phno}}</td>
+            <td>{{userform.regno}}</td>
+            <td class="tablecol">
+              <a href="/media/{{userform.userform}}" target="_blank"><img src="{% static 'assets/pdflogo2.png' %}"
+                  alt="" /></a>
+              {{userform.userform}}
+            </td>
+            <td>{{userform.date}}</td>
+            <td>
+              <form action="{%url 'formstatus' userform.id %}" method="POST">
+                {%csrf_token%}
+                {%if userform.status%}
+                <input type="checkbox" name="" onclick="rusure()" checked>
+                Accepted
+                {%else%}
+                <input type="checkbox" name="" onclick="rusure()"> Pending
+                {%endif%}
+                <div class="cnfm" id="cnfm" style="display: block;">
+                  Change Status?
+                  <input type="submit" value="Yes" id="ysure">
+                </div>
+              </form>
+            </td>
+            <td>
+              <form action="{% url 'deleteform' userform.id %}" method="POST">
+                {% csrf_token %}
+                <button type="submit">Delete</button>
+              </form>
+            </td>
+          </tr>
+          {% endfor %}
+        </table>
+      </div>
     </div>
   </div>
-</div>
+</section>
+<hr>
+<hr>
 
+
+<section id="conquy">
+  <div class="container">
+    <h2>Contact Query</h2>
+    <div class="usercontactdiv">
+      <div class="usercontact-table">
+        <table class="tablecontact">
+          <tr>
+            <th>name</th>
+            <th>phone no</th>
+            <th>message</th>
+            <th>Delete</th>
+          </tr>
+          {% for usercontact in usercontacts %}
+          <tr>
+            <td>{{usercontact.name}}</td>
+            <td>{{usercontact.phno}}</td>
+            <td>{{usercontact.message}}</td>
+            <td>
+              <form action="{% url 'deletecontact' usercontact.id %}" method="POST">
+                {% csrf_token %}
+                <button type="submit">Delete</button>
+              </form>
+            </td>
+          </tr>
+          {%endfor%}
+        </table>
+      </div>
+    </div>
+  </div>
+</section>
 <script src="{%static 'script/script.js'%}"></script>
 
 {% endblock body %}
-</section>
